--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
 
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Collapsible Content</title>
+    <link rel="stylesheet" href =style.css>
+  </head>
+  <body>
+    <h1>Collapsible Content</h1><br/>
+    <div id="dynamic-content">
+      <button id="button" class="show">Click me</button>
+      <button id="button2" class="hide">Close up</button>
+      <p class="dynamic-content-text">The BRAVE man is not he who does not feel afraid, but he who CONQUERS that fear.-Nelson Mandela</p>
+    </div>
+    
+    <script src="app.js"></script>
+</body>
+  
